--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <title>Document</title>
+  <title>Url-Shortener</title>
 </head>
 <body>
   <div class="container">
@@ -30,6 +30,11 @@
             <td><a href="<%= shortUrl.full %>"><%= shortUrl.full %></a></td>
             <td><a href="<%= shortUrl.short %>"><%= shortUrl.short %></a></td>
             <td><%= shortUrl.clicks %></td>
+            <td>
+              <form action="/delete/<%= shortUrl._id %>" method="POST">
+                <button class="btn btn-danger" type="submit">Delete</button>
+              </form>
+            </td>
           </tr>
         <% }) %>
       </tbody>
